# Pulsgram

./: .gitignore  Cargo.toml  README.md  deploy.sh  readme.MD
.github/workflows/: ci.yml
app/: Cargo.toml  deploy.sh
app/engine/api/: Cargo.toml
app/engine/api/src/: lib.rs
app/engine/api/src/dto/: dev.rs  mod.rs
app/engine/api/src/routes/: cors.rs  mod.rs
app/engine/api/src/routes/dev/: mod.rs  trade.rs
app/engine/app_state/: Cargo.toml
app/engine/app_state/src/: lib.rs
app/engine/binance/: Cargo.toml
app/engine/binance/src/: client.rs  constants.rs  endpoints.rs  error.rs  errors.rs  filters.rs  lib.rs  response_types.rs  transport.rs  types.rs  utils.rs
app/engine/binance/src/endpoints/: account.rs  fees.rs  listen_key.rs  market.rs  mod.rs  orders.rs
app/engine/binance/src/filters/: mod.rs  quantize.rs
app/engine/binance/src/services/: trade.rs
app/engine/binance/src/tests/: behavior.rs  client.rs  mod.rs  stress.rs  test_support.rs
app/engine/domain/: Cargo.toml
app/engine/domain/src/: lib.rs
app/engine/domain/src/types/: mod.rs  order_side.rs  symbol.rs  trade.rs  trade_intent.rs
app/engine/listeners/errors_reporter/: Cargo.toml
app/engine/listeners/errors_reporter/src/: error.rs  lib.rs
app/engine/listeners/forwarder/: Cargo.toml
app/engine/listeners/forwarder/src/: lib.rs
app/engine/listeners/kol_follows/: Cargo.toml
app/engine/listeners/kol_follows/src/: lib.rs
app/engine/listeners/listen_key_keepalive/: Cargo.toml
app/engine/listeners/listen_key_keepalive/src/: lib.rs
app/engine/listeners/market_data/: Cargo.toml
app/engine/listeners/market_data/src/: lib.rs
app/engine/listeners/perp_kols/: Cargo.toml
app/engine/listeners/perp_kols/src/: lib.rs
app/engine/listeners/perp_signals/: Cargo.toml
app/engine/listeners/perp_signals/src/: lib.rs  regex.rs
app/engine/listeners/token_addressess_forwarder/: Cargo.toml
app/engine/listeners/token_addressess_forwarder/src/: lib.rs
app/engine/listeners/trade_executor/: Cargo.toml
app/engine/listeners/trade_executor/src/: lib.rs  utils.rs
app/engine/publisher/: Cargo.toml
app/engine/publisher/src/: lib.rs  types.rs
app/engine/shared/: Cargo.toml
app/engine/shared/src/: lib.rs
app/engine/telegram/: Cargo.toml
app/engine/telegram/src/: client.rs  config.rs  dialogs.rs  errors.rs  lib.rs  media.rs
app/engine/telegram_types/: Cargo.toml
app/engine/telegram_types/src/: lib.rs
app/engine/twitter/: Cargo.toml
app/engine/twitter/src/: lib.rs  local_tests.rs
app/runtime/: Cargo.toml
app/runtime/src/: bootstrap.rs  config.rs  error.rs  main.rs  types.rs  utils.rs
app/src/: main.rs  state.rs  utils.rs
docs/: ARCHITECTURE.md  TRADING_METRICS.md
engine/api/: Cargo.toml
engine/api/src/: lib.rs
engine/api/src/routes/: mod.rs
engine/app_state/: Cargo.toml
engine/app_state/src/: lib.rs
engine/binance/src/: client.rs  lib.rs  utils.rs
engine/forwarder/: Cargo.toml
engine/forwarder/src/: lib.rs
engine/listeners/analysis/: Cargo.toml
engine/listeners/analysis/src/: channel.rs  groups.rs  lib.rs  user.rs
engine/listeners/forwarder/: Cargo.toml
engine/listeners/forwarder/src/: lib.rs
engine/listeners/kol_follows/: Cargo.toml
engine/listeners/kol_follows/src/: lib.rs  utils.rs
engine/listeners/lc_signals/: Cargo.toml
engine/listeners/lc_signals/src/: lib.rs  regex.rs
engine/listeners/perp_signals/src/: lib.rs  regex.rs
engine/listeners/test_listener/: Cargo.toml
engine/listeners/test_listener/src/: lib.rs
engine/listeners/token_addressess_forwarder/: Cargo.toml
engine/listeners/token_addressess_forwarder/src/: lib.rs
engine/publisher/: Cargo.toml
engine/publisher/src/: lib.rs  types.rs
engine/telegram/: Cargo.toml
engine/telegram/src/: client.rs  config.rs  dialogs.rs  lib.rs  msg_reply.rs  peers.rs
engine/telegram_types/: Cargo.toml
engine/telegram_types/src/: lib.rs
engine/test_listener/: Cargo.toml
engine/test_listener/src/: lib.rs
engine/token_addressess_forwarder/: Cargo.toml
engine/token_addressess_forwarder/src/: lib.rs
engine/twitter/src/: lib.rs  local_tests.rs  regex.rs
persistance/: Cargo.toml
persistance/migrations/: 0001_chats.down.sql
persistance/src/: main.rs
persistence/: Cargo.toml  README.md
persistence/migrations/: 0001_chats.up.sql
persistence/src/: db.rs  main.rs  utils.rs
persistence/src/api/: mod.rs
persistence/src/api/routes/: cors.rs  middlewares.rs  mod.rs
persistence/src/queries/: chats.rs
persistence/src/repositories/: error.rs  mod.rs
persistence/src/repositories/chat/: mod.rs  queries.rs
scripts/: run_trades.sh  stress.sh
watchdog/: README.md  index.html  package-lock.json  package.json
watchdog/src/: App.jsx  App.tsx  ping.ts  services.ts  types.ts
watchdog/src/Indicator/: Indicator.css  Indicator.tsx
watchdog/src/components/Column/: Column.css  Column.tsx
watchdog/src/components/Dashboard/: Dashboard.css  Dashboard.tsx
watchdog/src/components/ServicesRow/: ServiceRow.css  ServiceRow.tsx
