[workspace]
members = ["app", "engine/listeners/token_addressess_forwarder", "engine/listeners/forwarder", "engine/publisher","engine/telegram"
, "engine/api", "engine/telegram_types", "engine/app_state", "engine/listeners/perp_signals", "engine/listeners/kol_follows", "engine/twitter", "engine/listeners/perp_kols", "engine/binance"]
resolver = "2"

[profile.release]
strip = true        # Remove symbols from binary
opt-level = 3       # Maximum optimization for speed
lto = true          # Optimize at link stage ("fat")
codegen-units = 1   # Reduce parallel codegen to maximize optimizations
panic = "abort"     # Remove unwind information, reducing binary size and overhead (no backtraces in production)

[profile.dev]
opt-level = 0
debug = true
