[package]
name = "app_state"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
telegram = {path = "../telegram"}
telegram_types = {path = "../telegram_types"}
reqwest = { version = "0.13", default-features = false } #TODO: Just needed for a type. Should be a part of global types in engine.
publisher = {path = "../publisher"}