[package]
name = "binance"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
domain = {path = "../domain"}

[dev-dependencies]
dotenv = "0.15"
serial_test = "3.4.0"