[package]
name = "telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
grammers-client = { version = "0.9.0", features = ["html"] }
grammers-mtsender = "0.9.0"
grammers-session = "0.9.0"
grammers-tl-types = "0.9.0"
tokio = { version = "1.49.0", features = ["full"] }
publisher = { path = "../publisher" }
serde = { version = "1.0.228", features = ["derive"] }
dashmap = "6.1.0"
