[package]
name = "kol_follows"
version = "0.1.0"
edition = "2024"

[dependencies]
publisher = { path = "../../publisher" }
regex = "1.12.3"
telegram_types = { path = "../../telegram_types" }
telegram = { path = "../../telegram" }
shared = {path = "../../shared"}

[features]
default = []         
production = []  
